tests/misc/tnolen.nim
discard """
  errormsg: "type mismatch: got <int literal(3)>"
  line: 8
"""

# please finally disallow Len(3)

echo len(3)
